# sharkadm-zip-creator

./: README.md  main.py  pyproject.toml
src/sharkadm_zip_creator/: __init__.py  archive_remover.py  trigger.py
src/sharkadm_zip_creator/flet_app/: app.py  constants.py  frame_config.py  frame_create_zip.py  frame_export_options.py  frame_log.py  frame_operations.py  frame_post_workflow_export_options.py  frame_source.py  frame_system.py  frame_validate.py  frame_workflow_export_options.py  operators.py  saves.py  utils.py
